Fix kpop profiles thumbnail stretch

--- a/koreanhandbook/scss/partials/_kpop.scss
+++ b/koreanhandbook/scss/partials/_kpop.scss
@@ -68,7 +68,6 @@
             }
             img {
                 width: 100%;
-                max-height: 12em;
             }
         }
     }
