--- a/koreanhandbook/static/css/main.css
+++ b/koreanhandbook/static/css/main.css
@@ -424,8 +424,7 @@ main {
   .grid.kpop .grid__item .grid__info {
     padding: 0 0 1em 0; }
   .grid.kpop .grid__item img {
-    width: 100%;
-    max-height: 12em; }
+    width: 100%; }
 .grid .grid__item.kpop {
   border-top: solid 0.5em #d15bb4; }
 .grid .grid__item.profile {
